<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numTxt"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:text="@string/Clear"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:onClick="clearButton"/>

            <Button
                android:id="@+id/LeftBraket"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:text="("
                android:textColor="@color/black"
                android:textSize="20sp"
                android:onClick="leftBraketButton"
                />

            <Button
                android:id="@+id/RightBraket"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:text=")"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:onClick="rightBraketButton"/>

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/orange"
                android:text="@string/divide"
                android:textColor="#6D4C41"
                android:textSize="20sp"
                android:onClick="divideButton"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/darkGray"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="sevenButton"/>

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/darkGray"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="eightButton"/>

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/darkGray"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="nineButton"/>

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/orange"
                android:text="@string/multiply"
                android:textColor="#6D4C41"
                android:textSize="20sp"
                android:onClick="multiplyButton"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/darkGray"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="fourButton"/>

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/darkGray"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="fiveButton"/>

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/darkGray"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="sixButton"/>

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/orange"
                android:text="@string/minus"
                android:textColor="#6D4C41"
                android:textSize="20sp"
                android:onClick="minusButton"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/darkGray"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="oneButton"/>

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/darkGray"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="twoButton"/>

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/darkGray"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="threeButton"/>

            <Button
                android:id="@+id/plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/orange"
                android:text="@string/plus"
                android:textColor="#6D4C41"
                android:textSize="20sp"
                android:onClick="plusButton"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="2"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/darkGray"
                android:onClick="zeroButton"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/darkGray"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="dotButton"/>

            <Button
                android:id="@+id/equals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/orange"
                android:text="@string/equals"
                android:textColor="#6D4C41"
                android:textSize="20sp"
                android:onClick="equalsButton"/>

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/numTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>